syntax = "proto3";
package org.schemata.schema;

import "schemata/protobuf/schemata.proto";
import "schemata/protobuf/subscribers.proto";
import "schemata/protobuf/contracts.proto";
import "product.proto";
import "google/protobuf/timestamp.proto";


option java_package = "org.protocol.schema";
option java_outer_classname = "UserBuilder";

enum UserActivityType {
  VIEW = 0;
  READ_REVIEW = 1;
  VIEW_DESCRIPTION = 2;
}

message User {

  option(message_core).description = "This is the description of the users table";
  option(message_core).comment = "The comment added after thought";
  option(message_core).see_also = "db.user MySQL table";
  option(owner) = "Platform";
  option(domain) = "Core";
  option(schema_type) = ENTITY;
  option(team_channel) = "#team-platform";
  option(alert_channel) = "#alerts-platform";

  option (upstream) = {
    subscribers: {name: "Upstream Team A" usage: "Upstream Usage A"}
    subscribers: {name: "Upstream Team B" usage: "Upstream Usage B"}
  };

  option (downstream) = {
    subscribers: {name: "Downstream Team A" usage: "Downstream Usage A"}
    subscribers: {name: "Downstream Team B" usage: "Downstream Usage B"}
  };


  option(constraints) = {
    provider: "Great Expectations",
    constraint: [
      {
        name: "age_range",
        description: "Age column should have values between 18 and 150",
        config: {
          key: "class_name",
          value: {string_value: "great_expectations.core.validation_operators.expect_column_values_to_be_between"}
        },
        config: {
          key: "column",
          value: {string_value: "age"}
        },
        config: {
          key: "min_value",
          value: {number_value: 18}
        },
        config: {
          key: "max_value",
          value: {number_value: 150}
        },
        config: {
          key: "mostly",
          value: {number_value: 0.95}
        }
      }
    ],
    constraint: [
      {
        name: "email_format",
        description: "email column should have valid email format",
        config: {
          key: "class_name",
          value: {string_value: "great_expectations.core.validation_operators.expect_column_values_to_be_valid_email"}
        },
        config: {
          key: "column",
          value: {string_value: "email"}
        }
      }
    ]
  };

  int32 id = 1
  [(field_core).description = "Unique identifier for User", (is_primary_key) = true];

  string name = 2
  [(field_core).description = "Name of the user"] ;

  string email = 3
  [(field_core).description = "email id for the user", (product_type) = "username", (is_classified) = true, (classification_level) = "LEVEL1"] ;

  bool is_active = 4
  [(field_core).description = "define the active status of the user. `true` == active; `false` = inactive`", (field_core).comment = "should refactor to non-binary status"];

  string timezone = 5
  [(field_core).description = "preferred time zone for the user"] ;

  string age = 6
  [(field_core).description = "Age of the user"] ;
}

message UserEvent {
  option(message_core).description = "This is the description of the users table";
  option(owner) = "Platform";
  option(domain) = "Core";
  option(schema_type) = EVENT;
  option(event_type) = LIFECYCLE;
  option(team_channel) = "#team-platform";
  option(alert_channel) = "#alerts-platform";

  User previous_user_state = 1
  [(field_core).description = "Previous version of the user entity before the mutation"];

  User current_user_state = 2
  [(field_core).description = "Current version of the user entity before the mutation"];

  ActivityType activity_type = 3
  [(field_core).description = "Lifecycle event type for the Users table"];

  google.protobuf.Timestamp timestamp = 4 [(field_core).description = "Timestamp of the activity"];
}

message UserActivityEvent {
  option(message_core).description = "This is the description of the users table";
  option(owner) = "Product";
  option(domain) = "Growth";
  option(schema_type) = EVENT;
  option(event_type) = ACTIVITY;
  option(team_channel) = "#team-growth";
  option(alert_channel) = "#alerts-growth";
  User user = 1 [(field_core).description = "User entity reference"];
  Product product = 2 [(field_core).description = "Product entity reference"];
  UserActivityType activity_type = 3 [(field_core).description = "Type of the user activity"];
  google.protobuf.Timestamp timestamp = 4 [(field_core).description = "Timestamp of the activity"];
}

message UserActivityAggregate {

  option(message_core).description = "This is the aggregated user activity view count. The event aggregated by user & product";
  option(owner) = "Product";
  option(domain) = "Growth";
  option(schema_type) = EVENT;
  option(event_type) = AGGREGATED;
  option(team_channel) = "#team-growth";
  option(alert_channel) = "#alerts-growth";

  User user = 1[(field_core).description = "User entity reference"];
  Product product = 2 [(field_core).description = "Product entity reference"];
  int64  count = 3 [(field_core).description = "Aggregated count of the user activity per product", (product_type) = "activity_count"];
  int32 windowTime = 4 [(field_core).description = "Max window time for the aggregation"];
  TimeUnit window_time_unit = 5 [(field_core).description = "TimeUnit of window for the aggregation"];
  google.protobuf.Timestamp timestamp = 6 [(field_core).description = "Timestamp of the activity"];

}